--- a/Code/config.json
+++ b/Code/config.json
@@ -21,5 +21,45 @@
         "gamma": 0.99,
         "max_iterations": 1000,
         "convergence_threshold": 1e-6
+    },
+    "ppo": {
+        "gamma": 0.99,
+        "alpha": 0.0001,
+        "gae_lambda": 0.95,
+        "policy_clip": 0.2,
+        "batch_size": 16,
+        "n_epochs": 4,
+        "fc1_dims": 256,
+        "fc2_dims": 256,
+        "n_games": 50,
+        "n_fixed_pro_traces": 100,
+        "learn_interval": 20
+    },
+    "dqn": {
+        "gamma": 0.99,
+        "alpha": 0.0001,
+        "epsilon": 1.0,
+        "epsilon_min": 0.01,
+        "epsilon_dec": 0.995,
+        "batch_size": 16,
+        "fc1_dims": 256,
+        "fc2_dims": 256,
+        "n_games": 50,
+        "n_fixed_pro_traces": 100,
+        "learn_interval": 20,
+        "mem_size": 100000
+    },
+    "sac": {
+        "gamma": 0.99,
+        "alpha": 0.0001,
+        "tau": 0.005,
+        "batch_size": 16,
+        "fc1_dims": 256,
+        "fc2_dims": 256,
+        "n_games": 50,
+        "n_fixed_pro_traces": 20,
+        "learn_interval": 20,
+        "mem_size": 100000,
+        "reward_scale": 2.0
     }
 } 
